--- a/military/app/components/LoadingImage/LoadingImage.scss
+++ b/military/app/components/LoadingImage/LoadingImage.scss
@@ -1,35 +1,33 @@
 .image-container {
   position: relative;
   overflow: hidden;
-}
+  width: 500px;
+  height: 500px;
 
-.placeholder-image, .real-image {
-  width: 100%;
-}
-
-.blur .real-image {
-  opacity: 0;
-}
-
-.real-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.blur {
-  filter: blur(5px);
-}
-
-.unblur {
-  animation: unblur 1s linear;
-}
-
-@keyframes unblur {
-  from {
-    filter: blur(10px)
+  @media screen and (max-width: 768px) {
+    width: 400px;
+    height: 400px;
   }
-  to {
+  
+  @media screen and (max-width: 480px) {
+    width: 300px;
+    height: 300px;
+  }
+
+  &.blur {
+    filter: blur(10px);
+    transition: filter 0.3s ease;
+  }
+
+  &.unblur {
     filter: blur(0);
+    transition: filter 0.3s ease;
+  }
+
+  .placeholder-image,
+  .real-image {
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
